modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.7
  -  Added language files
     * Autoconf (Mihai Vasilian)
     * ECMAScript (Michel Mariani)
     * J (Ric Sherlock)
     * Oxygene / Delphi Prism (Carlo Kok)
  -  Minor change in INT_BASIC number regexp to support '..' range operator
     as to be found in most Pascal-like languages (BenBE)
  -  Fixed an issue with Hardquotes for empty strings (like '' in Delphi) (BenBE)
  -  Introduced a fix for improved performance when matching numbers (BenBE)
  -  Improvements to language fiels (BenBE)
     * Fixed broken links in Prolog language file (BenBE)
     * Fixed keywords in generics expressions in Java5 (BenBE)
     * Added support for import static in Java5 (BenBE)
     * Added Standard Integer Types for C and c++ (BenBE)
     * Fixed some regexp issues in Erlang (BenBE)
     * Added some missing keywords for Clojure (BenBE)
     * Added some missing keywords for Lisp (BenBE)
     * Fixed a problem with variable names in Prolog (BenBE)
     * Some color changes for AutoIt (BenBE)
     * Added support for basic include directive processing for AutoIt (BenBE)
     * Added support for ::-style labels as comments (SF#2947393, BenBE)
     * Removed backslash as Escape Char in T-SQL (SF#2939199, Bruno Braga)
     * Added Nested Comments Support for Haskell (SF#2922317, BenBE)
     * Fixed Comments for VIM, added some keywords, proposed porting of
       Regular Expression markup from Perl (SF#2818047, psycojoker, BenBE)
     * Fixed warnings for Language Check of Tcl (BenBE)
Version 1.0.8.6
  -  Added language files
     * Clojure (Jess Johnson)
     * Cuesheet (Benny Baumann)
     * F# (Julien Ortin)
     * GAMBAS (Jesus Guardon)
     * Logtalk (Paulo Moura)
     * MapBasic (Tomasz Berus)
     * NewLisp (cormullion)
     * Perl 6 (Kodi Arfer)